--- a/app/styles/App.scss
+++ b/app/styles/App.scss
@@ -9,6 +9,7 @@
 @import "./sass/filterTool";
 @import "./sass/login";
 @import "./sass/register";
+@import "./sass/ImagesLandlordDetails";
 
 * {
   box-sizing: border-box;
