--- a/app/styles/sass/_config.scss
+++ b/app/styles/sass/_config.scss
@@ -34,7 +34,7 @@ $main-black: hsl(0, 0%, 21%);
   font-size: 15px;
   height: 40px;
   width: 120px;
-  border-radius: 50px;
+  border-radius: 10px;
   margin: 20px 0;
   cursor: pointer;
   &:hover {
@@ -77,8 +77,11 @@ $main-black: hsl(0, 0%, 21%);
 @mixin input() {
   border: none;
   outline: none;
-  padding: 10px;
+  padding: 15px;
   margin: 5px 0;
+  background-color: #fff;
+  border-radius: 10px;
+  width: 100%;
 }
 
 @mixin input2() {
@@ -87,5 +90,6 @@ $main-black: hsl(0, 0%, 21%);
   padding: 15px;
   margin: 5px 0;
   background-color: #fff;
-  width: 100%;
+  border-radius: 10px;
+  height: 80px;
 }
