--- a/styles/sass/_LandlordDetails.scss
+++ b/styles/sass/_LandlordDetails.scss
@@ -1,4 +1,4 @@
-.ImagesLandlordDetails {
+.LandlordDetails {
   background-color: rgb(240, 240, 240);
   height: 100vh;
   width: 100vw;
@@ -9,6 +9,7 @@
     padding: 30px 50px;
     .image-name {
       @include flex(row);
+      margin: 10px 0;
       .img {
         position: relative;
         width: 100px;
@@ -24,19 +25,27 @@
       background-color: rgb(240, 240, 240);
       border-radius: 20px;
       padding: 20px;
-      margin: 50px 0;
+      margin: 10px 0;
     }
-    .message {
-      height: 240px;
-      width: 100%;
-      #msg {
-        width: 100%;
-        height: 100%;
+    .message-form {
+      .message-title {
+      }
+      .message {
+        text-align: center;
+        #msg {
+          width: 100%;
+          height: 200px;
+          border-radius: 20px;
+          border: none;
+          outline: none;
+          padding: 10px;
+          background-color: rgb(240, 240, 240);
+        }
+      }
+      #sendMessageBtn {
+        font-size: 23px;
         border-radius: 20px;
-        border: none;
-        outline: none;
-        padding: 10px;
-        background-color: rgb(240, 240, 240);
+        margin: 20px 0;
       }
     }
   }
