--- a/styles/sass/_OfferSpecification.scss
+++ b/styles/sass/_OfferSpecification.scss
@@ -6,10 +6,19 @@
   width: 90%;
   margin: 0 auto;
   flex-wrap: wrap;
+  min-height: 70vh;
+  align-items: flex-start;
   .specification {
     @include flex(column);
+    padding: 60px;
     .offerHeader {
       position: relative;
+      .offer-duration {
+        .offerTitleH1 {
+          font-weight: bolder;
+          color: #0339a6;
+        }
+      }
       .offer-title {
         .offerTitleH1 {
         }
@@ -33,9 +42,65 @@
         }
       }
     }
+    .mainDetails {
+      width: 100%;
+      margin-top: 40px;
+      font-size: 25px;
+
+      .location-features {
+        @include flex(row);
+        justify-content: space-between;
+        align-items: flex-start;
+
+        .location-flatInfo {
+          // @include flex(row);
+          .locationH1 {
+            font-weight: bolder;
+          }
+        }
+        .locationAdvantages {
+          @include flex(column);
+          width: 35%;
+          font-size: 20px;
+          .universities,
+          .transportations {
+            margin-bottom: 20px;
+            .uniTitle,
+            .transportationType {
+              font-weight: bolder;
+            }
+            .transportation,
+            .university {
+              display: flex;
+              width: 100%;
+              justify-content: space-between;
+
+              .icon-uniName,
+              .icon-transportationName {
+                display: flex;
+
+                .uniName,
+                .transportationName {
+                  margin-left: 3px;
+                }
+              }
+            }
+            width: 100%;
+          }
+        }
+      }
+      .offerFeatures {
+        width: 100%;
+        .featuresH4 {
+          font-weight: bolder;
+        }
+      }
+    }
   }
   .map {
-    background-color: green;
-    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 60px;
   }
 }
