--- a/styles/sass/_filterTool.scss
+++ b/styles/sass/_filterTool.scss
@@ -5,6 +5,8 @@
   text-align: center;
   height: 100vh;
   // width: 100%;
+  background-color: red;
+
   .title-arrow {
     display: flex;
     justify-content: space-between;
