--- a/styles/sass/_offers.scss
+++ b/styles/sass/_offers.scss
@@ -18,24 +18,24 @@
   }
 }
 
-@media screen and (max-width: 1648px) {
-  .Offers {
-    .offers-container {
-      grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
-      gap: 60px;
-    }
-  }
-}
+// @media screen and (max-width: 1648px) {
+//   .Offers {
+//     .offers-container {
+//       grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+//       gap: 60px;
+//     }
+//   }
+// }
 
-@media screen and (max-width: 800px) {
-  .Offers {
-    .offers-container {
-      gap: 10px;
-      width: 100%;
-      padding: 10px;
-      grid-template-columns: repeat(auto-fill, minmax(40%, 1fr));
-    }
-    .filter-tool {
-    }
-  }
-}
+// @media screen and (max-width: 800px) {
+//   .Offers {
+//     .offers-container {
+//       gap: 10px;
+//       width: 100%;
+//       padding: 10px;
+//       grid-template-columns: repeat(auto-fill, minmax(40%, 1fr));
+//     }
+//     .filter-tool {
+//     }
+//   }
+// }
